  can now be added to its own database.
- Installer now deletes only installed files thus preserving installed.ini,
  userdb.ini and the cache directory.
- Installer now supports silent uninstallation.
- AppSnap source is now distributed in a ZIP archive by the installer.
- Added MAJORMINORSUB_VERSION in order to support ImageMagick uninstallation.

Bug Fixes
- Fixed bug in "Update DB" where a failed DB download was wiping out the current
  DB and killing AppSnap.
- Installer filenames which do not contain any version information are now 
  redownloaded if cache timeout has expired (configured in config.ini) since we 
  have no way to know if the file has changed.
- Obsolete sections in installed.ini are now filtered out.
- Added some more error checking to update DB.
- AppSnap no longer displays a console window during installs/uninstalls.
- Fixed bug in CLI that was causing crash if latest version detection failed.
- Fixed bug in uninstallation where quotes were being lost when uninstaller had
  upper case characters.

Scrape Fixes
- Fixed Adobe Reader scraping and download link.
- Fixed Firefox and Thunderbird download links, ftp was not working.
- WinSCP version scraping now done on Sourceforge.
- Dia's version search now includes pre-releases - e.g. 0.96-pre4
- uTorrent now has sub-version numbering - e.g. 1.6.1

Version 1.2.1
-------------
New Applications
- Internet : TightVNC
- Fun and Games : BZFlag, Celestia, Stellarium, TuxPaint, TuxPaint Stamps
- Development : MySQL
- Productivity : Blender3D, DeepBurner Free, Dia, Gimp
- Utilities : Ant Renamer, KeePass
- Libraries : GTK+
- Entertainment : Juice Receiver

Internal Improvements
- Added support for zipped installers. AppSnap now extracts the ZIP and then 
  executes the installer.
- All background actions are now performed in a separate thread to prevent the 
  AppSnap GUI from locking up.

Bug Fixes
- SourceForge just rolled out new changes which broke all applications hosted